monitoring/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.final-work-k8s.raisa44.men
spec:
  hosts:
    - grafana.final-work-k8s.raisa44.men
  gateways:
    - istio-system/final-work-k8s-gateway
  http:
    - route:
        - destination:
            host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
            port:
              number: 80
